@@ -79,6 +79,7 @@
 /tests/server/accept-t
 /tests/server/acl-t
 /tests/server/background-t
+/tests/server/bind-t
 /tests/server/config-t
 /tests/server/continue-t
 /tests/server/env-t
